--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,9 @@ list(APPEND visitors
 
 list(APPEND values
     values/SentinelValue.cpp
-    values/DoubleValue.cpp)
+    values/DoubleValue.cpp
+    values/IntValue.cpp)
+
 
 add_executable(demo main.cpp
                ${ANTLR_SampleGrammarParser_CXX_OUTPUTS}
